# GorillaBank

./: Readme.md
API/App/: index.css  index.html  index.js
API/Gorilla/: CMakeLists.txt  main.cxx
API/Gorilla/controllers/: GorillaController.cxx
App/: index.html
App/src/: manifest.json
